[project]
name = "marimo-sandbox"
version = "0.1.0"
description = "This is a sample project using Marimo."
author = "Your Name"
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "google-genai>=1.29.0",
    "langextract>=1.0.6",
    "marimo>=0.14.17",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
]
